--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -12,6 +12,7 @@ body {
     src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
 }
 .layout {
   display: flex;
@@ -819,7 +820,7 @@ body {
     align-items: start;
     gap: 0.75rem;
   }
-  .diary_entry_container {
+  #diary_entry_container {
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
