--- a/css/edit.css
+++ b/css/edit.css
@@ -11,12 +11,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: pretendard!important;
+    font-family: pretendard-black!important;
 }
 
 @font-face {
-    font-family: pretendard;
-    src: url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+    font-family: pretendard-black;
+    src: url("../asset/font/Pretendard-Black.otf");
 }
 
 body {
