--- a/css/index.css
+++ b/css/index.css
@@ -14,12 +14,12 @@
     line-height: inherit;
     color: inherit;
     background-color: inherit;
-    font-family: pretendard!important;
+    font-family: pretendard-black!important;
 }
 
 @font-face {
-    font-family: pretendard;
-    src: url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+    font-family: pretendard-black;
+    src: url("../asset/font/Pretendard-Black.otf");
 }
 
 [data-dark=on] {
