--- a/scss/index.scss
+++ b/scss/index.scss
@@ -330,17 +330,42 @@ header {
 
 .headerBanner {
   overflow: hidden;
-  height: 240px;
+  height: 400px;
   border-radius: 24px;
   position: relative;
 
-  img {
-    //   position: absolute;
+  .mySwiper {
+    height: 100%;
+  }
+
+  .title {
+    position: absolute;
     width: 100%;
-    transform: translateY(-50%);
-    //   top: 50%;
-    //   left: 50%;
-    //   transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    z-index: 20;
+    font-size: var(--font-size-4);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    word-break: keep-all;
+    gap: 0.9375rem;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+    h3 {
+      width: 45%;
+      font-size: 2.2rem;
+    }
+
+    p {
+      font-size: var(--font-size-2);
+    }
+  }
+  img {
+    width: 100%;
   }
 }
 
