--- a/scss/main.scss
+++ b/scss/main.scss
@@ -179,6 +179,27 @@ section {
         border: 1px solid var(--list-border-color);
         border-radius: 20px;
 
+        .emojiBox {
+          width: 60%;
+
+          position: absolute;
+          top: 15px;
+          left: 15px;
+          z-index: 10;
+
+          display: flex;
+          align-items: center;
+          gap: 5px;
+
+          display: none;
+
+          li {
+            img {
+              width: 100%;
+            }
+          }
+        }
+
         a {
           display: block;
         }
