--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Pretendard;
 }
 
 body {
@@ -204,7 +205,7 @@ letter-spacing: -0.2px;
   aspect-ratio: 1 / 1;
 }
 .CSS_강아지사진그룹섹션 {
-  display: flex;
+  display: none;
   flex-direction: column;
   gap: 40px;
   align-items: center;
@@ -254,8 +255,13 @@ letter-spacing: -0.2px;
   background-position: 10px center; /* 이미지 위치 (텍스트 왼쪽) */
   background-size: 20px 20px; /* 이미지 크기 */
   padding-left: 40px; /* 텍스트와 아이콘 간격 */
+  font-size: 16px;
+  font-weight: 500;
 }
 
+.CSS_서치바:focus {
+  outline: none;
+}
 
 
 /* 모달 버튼 부분 */
@@ -291,6 +297,7 @@ letter-spacing: -0.2px;
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem; /* 24px */
+  margin-bottom: 50px;
   /* order: 3; */
 }
 
