--- a/css/index_mediaQuery.css
+++ b/css/index_mediaQuery.css
@@ -43,8 +43,17 @@
     border-radius: 1rem; /* 16px */
   }
 
-  .CSS_등록상자 {
-    order: 1;
+/* 문제.
+미디어쿼리줘서 서치바올리는거 할때
+드롭박스랑 서치바를 묶어둬가지고 2개가 올라감. 2개 분리해서 적용하기
+ */
+
+  .CSS_필터랑모달묶은그룹 {
+    flex-direction: column; /* 세로로 쌓이도록 변경 */
+  }
+
+  .CSS_서치바 {
+    margin-bottom: 20px; /* 서치바를 위로 올리고 아래에 공간 추가 */
   }
 
   .CSS_라디오그룹 {
