--- a/다이어리/diary-detail.css
+++ b/다이어리/diary-detail.css
@@ -9,19 +9,41 @@ html {
 }
 
 body {
-	font-family: 'Pretendard-Regular';
+  font-family: "Pretendard-Regular";
+  background: var(--basicBackgroundColor);
+  color: var(--darkToLightColor);
+}
+
+:root {
+  --basicBackgroundColor: #fff;
+  --darkToLightColor: #000;
+  --darkGrayToLightGrayColor: #333;
+  --lightGrayToDarkGrayColor: #d4d3d3;
+  --lightToDarkColor: #fff;
+  --basicCommentDivider: #e4e4e4;
+  --basicConfirmModalBackgroundColor: #fff;
+}
+
+[mode="dark"] {
+  --basicBackgroundColor: #1c1c1c;
+  --darkToLightColor: #fff;
+  --darkGrayToLightGrayColor: #d4d3d3;
+  --lightGrayToDarkGrayColor: #333;
+  --lightToDarkColor: #000;
+  --basicCommentDivider: #333;
+  --basicConfirmModalBackgroundColor: #1e1e1e;
 }
 
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
 .layout-wrapper {
-  background: #fff;
   max-width: 120rem;
   display: flex;
   justify-content: center;
@@ -44,7 +66,7 @@ body {
   padding: 0 0.125rem;
   align-self: stretch;
   align-items: center;
-  color: #000000;
+  justify-content: space-between;
 }
 
 .header_frame {
@@ -57,7 +79,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem
+  gap: 0.5rem;
 }
 
 .logo {
@@ -65,11 +87,42 @@ body {
   width: 8.125rem;
   height: 2.5rem;
   align-items: center;
-  color: #000;
+  color: var(--darkToLightColor);
   font-size: 1.125rem;
   font-style: normal;
   font-weight: 700;
   letter-spacing: -0.011rem;
+}
+
+.dark_mode_box {
+  display: flex;
+}
+
+.dark_mode_toggle {
+  appearance: none;
+  width: 2.5rem;
+  height: 1.5rem;
+  border-radius: 1.25rem;
+  background-color: lightblue;
+}
+
+.dark_mode_toggle::after {
+  display: block;
+  content: "";
+  width: 1.125rem;
+  height: 1.125rem;
+  background-color: white;
+  border-radius: 50%;
+  margin: 0.188rem;
+  transition: margin-left 0.3s;
+}
+
+.dark_mode_toggle:checked {
+  background-color: rgb(93, 192, 224);
+}
+
+.dark_mode_toggle:checked::after {
+  margin-left: 1.125rem;
 }
 
 .main {
@@ -79,7 +132,7 @@ body {
   align-items: center;
   gap: 1.5rem;
   align-self: stretch;
-  border-bottom: 0.063rem solid var(--Gray-B, #000);
+  border-bottom: 0.063rem solid var(--darkToLightColor);
 }
 
 .main_frame {
@@ -107,8 +160,7 @@ body {
   align-items: center;
   gap: 0.625rem;
   align-self: stretch;
-  border-bottom: 0.125rem solid #000;
-  color: #000;
+  border-bottom: 0.125rem solid var(--darkToLightColor);
   font-size: 1.375rem;
   font-style: normal;
   font-weight: 700;
@@ -191,7 +243,6 @@ body {
 }
 
 .content_label {
-  color: #000;
   font-size: 1rem;
   font-style: normal;
   font-weight: 600;
@@ -201,7 +252,7 @@ body {
 }
 
 .content {
-  color: var(--Gray-Gray-800, #333);
+  color: var(--darkGrayToLightGrayColor);
   font-size: 1rem;
   font-style: normal;
   font-weight: 500;
@@ -214,7 +265,7 @@ body {
   display: flex;
   justify-content: flex-end;
   align-self: stretch;
-  color: var(--Gray-Gray-900, #1C1C1C);
+  color: var(--Gray-Gray-900, #1c1c1c);
   font-size: 1rem;
   font-weight: 400;
 }
@@ -222,8 +273,9 @@ body {
 .copy_content_btn_layout > button {
   display: flex;
   align-items: center;
-  background: #fff;
+  background: var(--basicBackgroundColor);
   border: none;
+  color: var(--darkToLightColor);
 }
 
 .diary_action_container {
@@ -242,9 +294,9 @@ body {
   align-items: flex-start;
   gap: 0.625rem;
   border-radius: 0.5rem;
-  border: 0.063rem solid var(--Gray-Gray-200, #d4d3d3);
-  background: var(--Gray-W, #fff);
-  color: var(--Gray-Gray-900, #1c1c1c);
+  border: 0.063rem solid var(--lightGrayToDarkGrayColor);
+  background: var(--basicBackgroundColor);
+  color: var(--darkToLightColor);
   font-size: 1.125rem;
   font-style: normal;
   font-weight: 500;
@@ -268,7 +320,6 @@ body {
 }
 
 .comment_title {
-  color: #000;
   font-size: 1.125rem;
   font-weight: 600;
   padding-left: 0.188rem;
@@ -290,8 +341,8 @@ body {
   gap: 0.625rem;
   flex: 1 0 0;
   border-radius: 0.5rem;
-  border: 0.063rem solid var(--Gray-Gray-200, #d4d3d3);
-  background: var(--Gray-W, #fff);
+  border: 0.063rem solid var(--darkGrayToLightGrayColor);
+  background: var(--basicBackgroundColor);
   width: 100%;
 }
 
@@ -313,8 +364,8 @@ body {
   align-items: flex-start;
   gap: 0.625rem;
   border-radius: 0.5rem;
-  background: var(--Gray-B, #000);
-  color: var(--Gray-W, #fff);
+  background: var(--darkToLightColor);
+  color: var(--lightToDarkColor);
   font-size: 1.125rem;
   font-style: normal;
   font-weight: 600;
@@ -332,8 +383,15 @@ body {
   padding-top: 0.75rem;
   justify-content: space-between;
 }
+
+.no_result_box {
+  display: flex;
+  height: 14.563rem;
+  justify-content: center;
+  align-items: center;
+}
+
 .comment_content {
-  color: #000;
   font-size: 1rem;
   font-style: normal;
   font-weight: 500;
@@ -352,7 +410,7 @@ body {
 .comment_divider {
   width: 73rem;
   height: 0.063rem;
-  background: var(--Gray-Gray-100, #e4e4e4);
+  background: var(--basicCommentDivider);
 }
 
 .copy_toast {
@@ -403,13 +461,11 @@ body {
   align-items: center;
   gap: 2.5rem;
   border-radius: 1.5rem;
-  background: #fff;
-  color: #000;
+  background: var(--basicConfirmModalBackgroundColor);
   text-align: center;
 }
 
 .delete_diary_modal_title {
-  color: #000;
   text-align: center;
   font-size: 1.5rem;
   font-style: normal;
@@ -419,7 +475,6 @@ body {
 }
 
 .delete_diary_modal_content {
-  color: var(--Gray-Gray-800, #333);
   text-align: center;
   font-size: 1.25rem;
   font-style: normal;
@@ -473,16 +528,16 @@ body {
 }
 
 @keyframes animation {
-        from {
-          opacity: 0%;
-        }
-        50% {
-          opacity: 100%;
-        }
-        to {
-          opacity: 0%;
-        }
-      }
+  from {
+    opacity: 0%;
+  }
+  50% {
+    opacity: 100%;
+  }
+  to {
+    opacity: 0%;
+  }
+}
 
 @media (max-width: 48.688rem) {
   .layout {
