--- a/다이어리/diary-edit.css
+++ b/다이어리/diary-edit.css
@@ -5,23 +5,35 @@
 }
 
 body {
-	font-family: 'Pretendard-Regular';
+  font-family: "Pretendard-Regular";
 }
 
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+:root {
+  --basicBackgroundColor: #fff;
+  --darkToLightColor: #000;
+}
+
+[mode="dark"] {
+  --basicBackgroundColor: #1c1c1c;
+  --darkToLightColor: #fff;
 }
 
 .layout-wrapper {
-  background: #fff;
+  background: var(--basicBackgroundColor);
   max-width: 120rem;
   display: flex;
   justify-content: center;
   margin: 0 auto;
+  color: var(--darkToLightColor);
 }
 
 .layout {
@@ -41,6 +53,7 @@ body {
   align-self: stretch;
   align-items: center;
   color: #000000;
+  justify-content: space-between;
 }
 
 .header_frame {
@@ -53,7 +66,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem
+  gap: 0.5rem;
 }
 
 .logo {
@@ -61,11 +74,42 @@ body {
   width: 8.125rem;
   height: 2.5rem;
   align-items: center;
-  color: #000;
+  color: var(--darkToLightColor);
   font-size: 1.125rem;
   font-style: normal;
   font-weight: 700;
   letter-spacing: -0.011rem;
+}
+
+.dark_mode_box {
+  display: flex;
+}
+
+.dark_mode_toggle {
+  appearance: none;
+  width: 2.5rem;
+  height: 1.5rem;
+  border-radius: 1.25rem;
+  background-color: lightblue;
+}
+
+.dark_mode_toggle::after {
+  display: block;
+  content: "";
+  width: 1.125rem;
+  height: 1.125rem;
+  background-color: white;
+  border-radius: 50%;
+  margin: 0.188rem;
+  transition: margin-left 0.3s;
+}
+
+.dark_mode_toggle:checked {
+  background-color: rgb(93, 192, 224);
+}
+
+.dark_mode_toggle:checked::after {
+  margin-left: 1.125rem;
 }
 
 .main {
@@ -76,7 +120,7 @@ body {
   align-items: center;
   gap: 1.5rem;
   align-self: stretch;
-  border-bottom: 0.063rem solid var(--Gray-B, #000);
+  border-bottom: 0.063rem solid var(--darkToLightColor);
 }
 
 .main_frame {
@@ -112,7 +156,6 @@ body {
   align-items: center;
   gap: 0.625rem;
   align-self: stretch;
-  color: #000;
   font-size: 1.375rem;
   font-style: normal;
   font-weight: 700;
@@ -155,7 +198,6 @@ body {
 }
 
 .title {
-  color: var(--Gray-Gray-800, #333);
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 500;
@@ -205,8 +247,7 @@ body {
 }
 
 .content_title {
-  color: var(--Gray-Gray-800, #333);
-  font-size: 0.063rem;
+  font-size: 0.875rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.25rem;
@@ -319,7 +360,6 @@ body {
 }
 
 .comment_title {
-  color: #000;
   font-size: 1.125rem;
   font-weight: 600;
   padding-left: 0.188rem;
@@ -382,7 +422,6 @@ body {
   justify-content: space-between;
 }
 .comment_content {
-  color: #000;
   font-size: 1rem;
   font-style: normal;
   font-weight: 500;
