--- a/homework/section10/css/detail.css
+++ b/homework/section10/css/detail.css
@@ -21,7 +21,6 @@ body {
 .레이아웃 {
   display: flex;
   width: 100%;
-  max-width: 1168px;
   padding: 0 20px 40px 20px;
   flex-direction: column;
   align-items: flex-start;
@@ -30,16 +29,22 @@ body {
 }
 
 .헤더 {
+  display: flex;
   width: 100%;
   height: 60px;
   font-size: 18px;
   font-weight: 700;
   line-height: 16px;
-  padding: 20px;
+  padding: 20px 0;
+}
+
+.헤더 img {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
 
 .메인 {
-  margin-top: 40px;
   display: flex;
   width: 100%;
   padding-bottom: 16px;
@@ -144,7 +149,6 @@ body {
 
 .내용_복사_영역 {
   display: flex;
-  max-width: 1168px;
   justify-content: flex-end;
   align-items: center;
   gap: 8px;
@@ -167,6 +171,19 @@ body {
   border-radius: 8px;
   border: 1px solid var(--Gray-Gray-200, #D4D3D3);
   background: var(--Gray-W, #FFF);
+  cursor: pointer;
+}
+
+.회고없음_박스 {
+  display: flex;
+  width: 100%;
+  padding: 40px 0px;
+  justify-content: center;
+  align-items: center;
+}
+
+.회고없음_박스>div {
+  color: #919191;
 }
 
 .회고_영역 {
@@ -221,12 +238,13 @@ body {
   justify-content: center;
   gap: 10px;
   border-radius: 8px;
-  background: black
+  background: black;
+  cursor: pointer;
 }
 
 .보기_영역 {
   display: flex;
-  max-width: 1168px;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
