--- a/homework/section10/css/dropdown.css
+++ b/homework/section10/css/dropdown.css
@@ -11,7 +11,8 @@
   background: url(../images/드롭다운.png) no-repeat right center;
   /* margin-bottom: 10px; */
   /* 다이렉트로 쉽게 바꿀 수 없음 style.cssText 로 바꿔주기! */
-  --필터선택변수: "전체"
+  --필터선택변수: "전체";
+  cursor: pointer;
 }
 
 .드롭다운_제목::after {
@@ -37,6 +38,7 @@
   position: absolute;
   top: 60px;
   z-index: 0;
+
 }
 
 .드롭다운_메뉴 input {
@@ -56,4 +58,5 @@
   padding: 10px;
   color: var(--Gray-Gray-700, #5F5F5F);
   font-size: 16px;
+  cursor: pointer;
 }
