--- a/homework/section10/css/edit.css
+++ b/homework/section10/css/edit.css
@@ -21,7 +21,6 @@ body {
 .레이아웃 {
   display: flex;
   width: 100%;
-  max-width: 1168px;
   padding: 0 20px 40px 20px;
   flex-direction: column;
   align-items: flex-start;
@@ -30,16 +29,23 @@ body {
 }
 
 .헤더 {
+  display: flex;
   width: 100%;
   height: 60px;
   font-size: 18px;
   font-weight: 700;
   line-height: 16px;
-  padding: 20px;
+  padding: 20px 0;
+}
+
+.헤더 img {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
 .메인 {
-  margin-top: 40px;
   display: flex;
   width: 100%;
   padding-bottom: 16px;
@@ -54,8 +60,6 @@ body {
   flex-direction: column;
   width: 100%;
 }
-
-/* 수정화면 */
 
 .수정_기분_선택_영역 {
   display: flex;
@@ -183,6 +187,7 @@ body {
   font-size: 18px;
   font-weight: 600;
   line-height: 24px;
+  cursor: pointer;
 }
 
 .수정하기_버튼 {
@@ -201,6 +206,7 @@ body {
   font-size: 18px;
   font-weight: 600;
   line-height: 24px;
+  cursor: pointer;
 
   transition: translate 0.5s;
 }
