--- a/homework/section10/css/index.css
+++ b/homework/section10/css/index.css
@@ -120,6 +120,7 @@ body {
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 1.5rem;
+  cursor: pointer;
 }
 
 .비선택_탭 {
@@ -131,6 +132,7 @@ body {
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 1.5rem;
+  cursor: pointer;
 }
 
 .일기_쓰기_버튼 {
@@ -148,6 +150,7 @@ body {
 
   font-size: 18px;
   font-weight: 600;
+  cursor: pointer;
 
 }
 
@@ -617,6 +620,23 @@ body {
   font-weight: 600;
 }
 
+.등록하기_버튼_비활 {
+  display: flex;
+  width: 104px;
+  height: 48px;
+  padding: 8px 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: none;
+  border-radius: 8px;
+  background: #C7C7C7;
+  color: var(--반대버튼글자색);
+  font-size: 18px;
+  font-weight: 600;
+}
+
 .일기등록완료 {
   display: flex;
   height: 200px;
@@ -753,12 +773,14 @@ body {
   width: 24px;
   height: 24px;
   transform: scaleX(-1);
+  cursor: pointer;
 }
 
 .다음페이지_버튼 {
   line-height: 32px;
   width: 24px;
   height: 24px;
+  cursor: pointer;
 }
 
 .페이지번호공간 {
@@ -772,6 +794,7 @@ body {
   border: none;
   border-radius: 8px;
   background-color: white;
+  cursor: pointer;
 }
 
 .페이지버튼_선택 {
