--- a/homework/css/diaryDetail.css
+++ b/homework/css/diaryDetail.css
@@ -141,14 +141,28 @@ main {
   font-weight: 600;
   line-height: 24px;
   letter-spacing: -0.18px;
+  cursor: pointer;
+}
+.comment-all-area {
+  background-color: beige;
+  max-width: 100%;
+}
+.comment-area {
+  background-color: aliceblue;
 }
 .comment {
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 5px 0;
+
+  background-color: pink;
 }
 .comment div {
   border-bottom: 1px solid #e4e4e4;
   padding: 12px 0;
+}
+
+/* 미디어쿼리(반응형) */
+@media (max-width: 47.9375rem) {
 }
