--- a/homework/css/homework2.css
+++ b/homework/css/homework2.css
@@ -79,12 +79,12 @@ main {
 
 .navigate {
   /* background-color: beige; */
-  width: 100%;
+  max-width: 100%;
   height: 3.75rem; /* 60px */
   display: flex;
   gap: 0.625rem; /* 10px */
   align-items: center;
-  padding: 0.9375rem; /* 15px */
+  padding: 0 20px; /* 15px */
   justify-content: space-between;
 }
 .tabs {
@@ -131,16 +131,20 @@ main {
   max-width: 100%;
   /* background-color: aquamarine; */
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .album-wrap {
-  max-width: 70%;
+  max-width: 100%;
   /* background-color: #919191; */
 }
 
 #filterBox {
-  width: 100%;
-  height: 2.5rem; /* 40px */
+  max-width: 100%;
+  height: 50px; /* 40px */
+  padding: 15px;
+  /* background-color: #28b4e1; */
+  display: flex;
+  align-items: center;
 }
 .filter {
   width: 7rem; /* 112px */
@@ -150,24 +154,23 @@ main {
 }
 
 #library {
-  width: 49rem; /* 784px */
+  width: 100%; /* 784px */
   height: auto;
   /* background-color: bisque; */
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
-  gap: 1.5rem; /* 24px */
+  gap: 1.5rem;
 }
 .one-album {
-  max-width: 23.75rem; /* 380px */
-  height: 23.3125rem; /* 373px */
+  max-width: 20.5rem; /* 380px */
+  height: 18.5rem; /* 373px */
   border-radius: 1rem; /* 16px */
   /* background-color: teal; */
   display: flex;
   align-items: center;
   flex-direction: column;
-
   text-decoration: none;
 
   color: #000;
@@ -185,8 +188,8 @@ main {
   font-size: 1.25rem; /* 20px */
 }
 .thumbnail {
-  width: 23.75rem; /* 380px */
-  height: 17.8125rem; /* 285px */
+  width: 17rem; /* 380px */
+  height: 14rem; /* 285px */
   border-radius: 1rem; /* 16px */
   /* background-color: aqua; */
   overflow: hidden;
@@ -195,9 +198,10 @@ main {
 .album-text {
   display: flex;
   flex-direction: column;
-  gap: 0.625rem; /* 10px */
-  width: 22.75rem; /* 364px */
+  gap: 0.3rem; /* 10px */
+  width: 17rem; /* 364px */
   /* background-color: aliceblue; */
+  padding: 0 10px;
 }
 .album-text-up {
   display: flex;
@@ -573,6 +577,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 40px;
 }
 .footer-contents {
   width: 73rem; /* 1168px */
