툴팁 관련 스타일 수정

--- a/react 과제/src/index.css
+++ b/react 과제/src/index.css
@@ -26,11 +26,11 @@
   }
 
   .toolTip {
-    @apply text-red-500 hidden;
+    @apply hidden;
   }
 
-  .validStyle:invalid ~ .toolTip {
-    @apply block;
+  .invalidStyle:invalid ~ .toolTip {
+    @apply block text-red-500;
   }
 }
 
